# django-todolist

./: .cache_ggshield  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  README.md  demo-file  file3.py  functional.py  main.yml  manage.py  pyproject.toml  requirements.in  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  docker-image-build.yml  main.yml
.scannerwork/: report-task.txt
accounts/: forms.py  tests.py  urls.py  views.py
accounts/templates/: login.html  register.html
accounts/templates/accounts/: login.html  register.html
api/: serializers.py  tests.py  urls.py  views.py
lists/: forms.py  models.py  tests.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_auto_20150301_1937.py  0003_auto_20150308_2120.py
lists/static/lists/js/: lists.js
lists/templates/lists/: base.html  index.html  overview.html  todolist.html
lists/templatetags/: lists_extras.py
todolist/: settings.py  urls.py  wsgi.py
todolist/static/css/: custom.css
todolist/static/js/: site.js
todolist/templates/: base.html
