[project]
name = "django-todolist"
version = "0.1.0"
description = "Django Todo List application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref",
    "Django",
    "djangorestframework",
    "pytz",
    "sqlparse",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
